force-app/main/default/objects/ssot__IssueRelationship__dlm/fields/ssot__IssueId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssueId__c</fullName>
    <label>Issue</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssueId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>