force-app/main/default/objects/ssot__IssueRelationship__dlm/fields/ssot__IssueObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssueObject__c</fullName>
    <label>Issue Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssueObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>