force-app/main/default/objects/ssot__IssueRelationship__dlm/fields/ssot__rel_1702009515816_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009515816_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IssueRelationship_IssueId_map_Proble_rel</label>
    <referenceTo>ssot__Problem__dlm</referenceTo>
    <relationshipLabel>IssueRelationship_IssueId_map_Proble_rel</relationshipLabel>
    <relationshipName>rel_1702009515816_end</relationshipName>
    <type>Lookup</type>
</CustomField>