force-app/main/default/objects/ssot__IssueRelationship__dlm/fields/ssot__rel_1702009517705_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009517705_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IssueRelationship_IssueId_map_Incide_rel</label>
    <referenceTo>ssot__Incident__dlm</referenceTo>
    <relationshipLabel>IssueRelationship_IssueId_map_Incide_rel</relationshipLabel>
    <relationshipName>rel_1702009517705_end</relationshipName>
    <type>Lookup</type>
</CustomField>